updated coding errors,nav height,accordian font size,

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="bg-color pt-2">
         <div class="container">
-            <nav class="d-flex align-items-center justify-content-center justify-content-between header1">
+            <nav class="d-flex align-items-center justify-content-center justify-content-between header1 py-14">
                 <div><img src="./assets/images/logo.png" alt="logo"></div>
 
                 <label for="menuicon">
@@ -35,55 +35,57 @@
         </div>
     </header>
     <section class="padding-top">
-            <img src="./assets/images/hero- section-image.png" alt="image" class="w-100">
+        <img src="./assets/images/hero-section-image.png" alt="image" class="w-100">
     </section>
     <section class="bg-color position-relative">
         <div class="container text-align">
             <h1 class="welcome pt-5 pb-2">WELCOME TO</h1>
             <img src="./assets/images/groupimage-sollana-business.png" alt="sollanabusiness-image" class="w-100 img">
-        </div>
-        <!-- <div class="d-lg-block d-none"> -->
-        <div class="absolute-1">
-            <img src="./assets/images/cheese-burgerimage-1.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-2">
-            <img src="./assets/images/cheese-burgerimage-2.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-3">
-            <img src="./assets/images/hamburger-1.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-4">
-            <img src="./assets/images/hamburger-2.png" alt="burger-image" class="image">
-        </div>
 
-        <div class="absolute-right-1">
-            <img src="./assets/images/cheese-burger-right1.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-right-2">
-            <img src="./assets/images/cheese-burger-right2.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-right-3">
-            <img src="./assets/images/hamburger-right1.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-right-4">
-            <img src="./assets/images/hamburger-right2.png" alt="burger-image" class="image">
-        </div>
+            <div class="absolute-1">
+                <img src="./assets/images/cheese-burgerimage-1.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-2">
+                <img src="./assets/images/cheese-burgerimage-2.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-3">
+                <img src="./assets/images/hamburger-1.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-4">
+                <img src="./assets/images/hamburger-2.png" alt="burger-image" class="image">
+            </div>
+
+            <div class="absolute-right-1">
+                <img src="./assets/images/cheese-burger-right1.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-right-2">
+                <img src="./assets/images/cheese-burger-right2.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-right-3">
+                <img src="./assets/images/hamburger-right1.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-right-4">
+                <img src="./assets/images/hamburger-right2.png" alt="burger-image" class="image">
+            </div>
         </div>
     </section>
 
     <section class="bgcolor">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-12 py-5">
+                <div class="col-lg-6 col-12 d-flex flex-column justify-content-center">
                     <h2 class="heading-2">It was popularised</h2>
-                    <p class="paragraph">Have you heard? We’re hiring! We have 3,333 working positions to fill on the
+                    <p class="paragraph py-2">Have you heard? We’re hiring! We have 3,333 working positions to fill on
+                        the
                         Solana blockchain. Once all positions are
                         filled it’s crucial to stay on your toes because the corporate penguins are coming! Any penguins
                         caught chilling on the
                         floor when corporate arrives will be immediately fired and swept away! This makes SFFB a
                         deflationary collection until
                         we reach a maximum staff of 1,666 mcnoots in total.</p>
-                    <button class="discover curser-pointer">DISCOVER MORE</button>
+                    <div>
+                        <button class="discover curser-pointer">DISCOVER MORE</button>
+                    </div>
                 </div>
                 <div class="col-lg-6 col-12">
                     <img src="./assets/images/cartoon-image.png" alt="image" class="w-100 h-100">
@@ -160,82 +162,81 @@
     </section>
 
     <section class="bg-color py-5 position-relative">
-        <h4 class="roadmap pb-5">ROADMAP 1.0</h4>
-        <div class="timeline">
-            <div class="container-1 left">
-                <div class="content content-card">
-                    <div class="d-flex gap-2">
-                        <p class="qr ">Q4</p>
-                        <p class="qr">2021</p>
+        <div class="container">
+            <h4 class="roadmap pb-5">ROADMAP 1.0</h4>
+            <div class="timeline">
+                <div class="container-1 left">
+                    <div class="content content-card">
+                        <div class="d-flex gap-2">
+                            <p class="qr ">Q4</p>
+                            <p class="qr">2021</p>
+                        </div>
+                        <div>
+                            <p class="launch mb-0">1. Launch SFFB <br>
+                                2. SELL OUT <br>
+                                3. Apply for secondary marketplace listings</p>
+                        </div>
                     </div>
-                    <div>
-                        <p class="launch mb-0">1. Launch SFFB <br>
-                            2. SELL OUT <br>
-                            3. Apply for secondary marketplace listings</p>
-                    </div>
+
                 </div>
-
             </div>
-        </div>
 
-        <div class="timeline">
-            <div class="container-2 right">
-                <div class="content content-card1">
-                    <div class="d-flex gap-2">
-                        <p class="qr ">Q1</p>
-                        <p class="qr">2022</p>
+            <div class="timeline">
+                <div class="container-2 right">
+                    <div class="content content-card1">
+                        <div class="d-flex gap-2">
+                            <p class="qr ">Q1</p>
+                            <p class="qr">2022</p>
+                        </div>
+                        <div>
+                            <p class="launch">1. Charity Giveaway <br>
+                                2. Launch Adopt-A-Penguin Program <br>
+                                3. Secure Partnerships</p>
+                        </div>
                     </div>
-                    <div>
-                        <p class="launch">1. Charity Giveaway <br>
-                            2. Launch Adopt-A-Penguin Program <br>
-                            3. Secure Partnerships</p>
-                    </div>
+
                 </div>
-
             </div>
-        </div>
 
-        <div class="timeline1">
-            <div class="container-3 left-1">
-                <div class="content content-card2">
-                    <div class="d-flex gap-2">
-                        <p class="qr ">Q2</p>
-                        <p class="qr">2022</p>
+            <div class="timeline1">
+                <div class="container-3 left-1">
+                    <div class="content content-card2">
+                        <div class="d-flex gap-2">
+                            <p class="qr ">Q2</p>
+                            <p class="qr">2022</p>
+                        </div>
+                        <div>
+                            <p class="launch">1. SFFB Merch Release <br>
+                                2. Stay tune for Roadmap 2.0</p>
+                        </div>
                     </div>
-                    <div>
-                        <p class="launch">1. SFFB Merch Release <br>
-                            2. Stay tune for Roadmap 2.0</p>
-                    </div>
+
                 </div>
-
             </div>
-        </div>
-
-        <!-- <div class="d-lg-block d-none"> -->
-        <div class="absolute1">
-            <img src="./assets/images/roadmap-burgerleft-1.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute2">
-            <img src="./assets/images/roadmap-burgerleft-2.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute3">
-            <img src="./assets/images/roadmap-burgerleft-3.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute4">
-            <img src="./assets/images/roadmap-burgerleft-4.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-right1">
-            <img src="./assets/images/roadmap-burger-right1.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-right2">
-            <img src="./assets/images/roadmap-burger-right2.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-right3">
-            <img src="./assets/images/roadmap-burger-right3.png" alt="burger-image" class="image">
-        </div>
-        <div class="absolute-right4">
-            <img src="./assets/images/roadmap-burger-right4.png" alt="burger-image" class="image">
-        </div>
+            <div class="absolute1">
+                <img src="./assets/images/roadmap-burgerleft-1.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute2">
+                <img src="./assets/images/roadmap-burgerleft-2.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute3">
+                <img src="./assets/images/roadmap-burgerleft-3.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute4">
+                <img src="./assets/images/roadmap-burgerleft-4.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-right1">
+                <img src="./assets/images/roadmap-burger-right1.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-right2">
+                <img src="./assets/images/roadmap-burger-right2.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-right3">
+                <img src="./assets/images/roadmap-burger-right3.png" alt="burger-image" class="image">
+            </div>
+            <div class="absolute-right4">
+                <img src="./assets/images/roadmap-burger-right4.png" alt="burger-image" class="image">
+            </div>
         </div>
     </section>
 
@@ -354,13 +355,10 @@
                         </div>
                     </div>
                 </div>
-
-
-
                 <div class="text-center mt-5">
                     <img src="./assets/images/footerlogo-image.png" alt="footer-image" class="logo">
                     <div class="d-flex gap-4 mt-5">
-                        <span class="curser-pointer ms-auto">
+                        <a class="curser-pointer ms-auto">
                             <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 72 72"
                                 fill="none">
                                 <g clip-path="url(#clip0_34717_2781)">
@@ -369,19 +367,19 @@
                                         fill="#FF0000" />
                                 </g>
                             </svg>
-                        </span>
-                        <span class="curser-pointer me-auto">
+                        </a>
+                        <a class="curser-pointer me-auto">
                             <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 72 72"
                                 fill="none">
                                 <path
                                     d="M70.8463 14.6985C68.3603 15.8001 65.6897 16.5444 62.8821 16.8808C65.779 15.1474 67.9463 12.4193 68.9796 9.20541C66.2579 10.822 63.2791 11.96 60.1728 12.5697C58.0839 10.3394 55.3171 8.86102 52.3019 8.36426C49.2867 7.86749 46.1918 8.38009 43.4978 9.82246C40.8038 11.2648 38.6614 13.5563 37.4031 16.3411C36.1448 19.1258 35.8412 22.2481 36.5392 25.2231C31.0244 24.9462 25.6294 23.5128 20.7044 21.016C15.7794 18.5191 11.4344 15.0146 7.95145 10.7298C6.76054 12.7841 6.07577 15.1659 6.07577 17.7025C6.07444 19.9861 6.63679 22.2347 7.71291 24.2488C8.78903 26.2629 10.3457 27.9802 12.2447 29.2484C10.0423 29.1783 7.88855 28.5832 5.96264 27.5127V27.6913C5.96241 30.8941 7.07028 33.9983 9.09825 36.4772C11.1262 38.9562 13.9494 40.6571 17.0887 41.2915C15.0456 41.8444 12.9037 41.9258 10.8245 41.5297C11.7103 44.2855 13.4356 46.6953 15.759 48.4218C18.0823 50.1483 20.8875 51.1051 23.7816 51.1582C18.8686 55.015 12.8011 57.107 6.55511 57.0978C5.4487 57.0981 4.34323 57.0335 3.24438 56.9043C9.58442 60.9807 16.9647 63.1441 24.5021 63.1357C50.0173 63.1357 63.9659 42.003 63.9659 23.675C63.9659 23.0795 63.951 22.4781 63.9242 21.8826C66.6373 19.9205 68.9793 17.4909 70.8404 14.7074L70.8463 14.6985Z"
                                     fill="#FF0000" />
-                            </svg></span>
+                            </svg></a>
                     </div>
                 </div>
                 <p class="copyright mt-4">@Copyright 2021</p>
             </div>
-
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
